fix: make wallet heading buttons the same color in dark mode (#853)

--- a/src/renderer/styles/_theme.css
+++ b/src/renderer/styles/_theme.css
@@ -65,6 +65,9 @@
   --theme-option-button: #3d456d;
   --theme-option-button-hover: #cc5e60;
   --theme-option-button-text: #8894cf;
+  --theme-option-heading-button: #3d456d;
+  --theme-option-heading-button-hover: #cc5e60;
+  --theme-option-heading-button-text: #8894cf;
   --theme-input-toggle-choice: #f1f5f8;
   --theme-input-toggle-choice-text: #606f7b;
   --theme-input-field-border: #b9c2d7;
@@ -162,6 +165,9 @@
   --theme-option-button: #383c4d;
   --theme-option-button-hover: #cc5e60;
   --theme-option-button-text: #5b627c;
+  --theme-option-heading-button: #3d456d;
+  --theme-option-heading-button-hover: #cc5e60;
+  --theme-option-heading-button-text: #8894cf;
   --theme-input-toggle-choice: #333644;
   --theme-input-toggle-choice-text: #4c5166;
   --theme-input-field-border: #585c6f;
